--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myweb",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "my website template",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/diwao/myweb#readme",
   "devDependencies": {
     "browser-sync": "^2.11.2",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-ejs": "^2.1.1",
@@ -29,6 +30,7 @@
     "gulp-htmlhint": "^0.3.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3"
   }
