--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   },
   "extends": "eslint:recommended",
   "env": {
-    "browser": true
+    "browser": true,
+    "node": true
   },
   "rules": {
     "no-console": 1, //コンソールを使用している
