--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myweb",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "my website template",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-ejs": "^2.1.1",
     "gulp-eslint": "^2.0.0",
     "gulp-htmlhint": "^0.3.1",
@@ -32,6 +33,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "run-sequence": "^1.1.5"
   }
 }
