--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myweb",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "my website template",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "gulp.spritesmith": "^6.2.1",
     "run-sequence": "^1.1.5"
   }
 }
