--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myweb",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "my website template",
   "main": "index.js",
   "scripts": {
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/diwao/myweb#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "browser-sync": "^2.11.2",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-ejs": "^2.1.1",
     "gulp-eslint": "^2.0.0",
