--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-ejs": "^2.1.1",
     "gulp-eslint": "^2.0.0",
     "gulp-htmlhint": "^0.3.1",
+    "gulp-if": "^2.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
